# MosfireDRP

./: .gitignore  404.html  MOSFIRE_DRP_2014jun23.docx  MOSFIRE_DRP_Manual.docx  MOSFIREimage.ipynb  README.md  README_Alcorn.txt  _config.yml  generate_pdf  index.html  index.md  manual.md  mospy.yaml  old_MOSFIRE_DRP_Manual.docx  params.json  search.html  setup.cfg  setup.py  sitemap.xml
MOSFIRE/: Background.py  Bspline.py  CSU.py  Combine.py  Detector.py  Extract.py  Filters.py  Fit.py  Flats.py  IO.py  Longslit.py  MosfireDrpLog.py  Options.py  Rectify.py  Wavelength.py  Wavelength.py.xcor_noargon  __init__.py  conftest.py  extractspectrum.py  nmpfit.py  nmpfit_mos.py  numerixenv.py  setup.py
_drafts/: install-instructions-for-anaconda-python.md
_manual/: 01changes.md  02preface.md  03installing.md  03installing_2015A.md  04retrieve.md  05handle.md  06autodriver.md  07driver.md  08flats.md  09wavelengthYJH.md  10wavelengthK.md  11background.md  12rectify.md  13extract.md  14longslit.md
_posts/: 2016-05-11-welcome-to-jekyll.markdown  2016-06-06-anaconda-install.markdown  2016-06-06-install-instructions-for-anaconda-python.md
apps/: AutoDriver.py  CSU_Check.py  CSU_plot_confirm.py  audit.py  check_CSU_pos.py  db.py  handle.py  handle.py~  mospy  mospy_anaconda  mospy~  plot_scale.py  show_img.py  what.py
autodriver/: index.html
background/: index.html
changes/: index.html
docs/: autodriver.md  background.md  driver.md  handle.md  headercomments.md  hints.md  installing.md  long2pos.md  longslit.md  manual.md  wavelengthK.md  wavelengthYJH.md
(+56 files in other folders)
