[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build


[ah_bootstrap]
auto_use = False

[metadata]
package_name = MOSFIRE
description = MOSFIRE Data Reduction Pipeline
long_description = MOSFIRE Data Reduction Pipeline
author = MOSFIRE
author_email = mosfiredrp@gmail.com
url = mosfire.readthedocs.org
edit_on_github = False
github_project = Mosfire-DataReductionPipeline/MosfireDRP
