[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = MOSFIRE
description = MOSFIRE data reduction pipeline
long_description = MOSFIRE data reduction pipeline
author = MOSFIRE
author_email = mosfiredrp@gmail.com
license = BSD
url = http://mosfire-datareductionpipeline.github.io/MosfireDRP/
edit_on_github = False
github_project = Mosfire-DataReductionPipeline/MosfireDRP
